tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-2.stderr
error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-with-cycle-error-2.rs:8:12
   |
LL | type Foo = impl Bar<Foo, Item = Foo>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same crate

error: aborting due to 1 previous error

